--- a/package.json
+++ b/package.json
@@ -28,9 +28,15 @@
     "@nestjs/platform-express": "^10.0.0",
     "@nestjs/swagger": "^7.1.0",
     "@nestjs/typeorm": "^11.0.0",
+    "@types/passport-google-oauth20": "^2.0.16",
     "bcrypt": "^6.0.0",
     "class-validator": "^0.14.2",
+    "google-auth-library": "^10.1.0",
+    "passport": "^0.7.0",
+    "passport-google-oauth2": "^0.2.0",
+    "passport-google-oauth20": "^2.0.0",
     "passport-jwt": "^4.0.1",
+    "passport-local": "^1.0.0",
     "pg": "^8.16.1",
     "reflect-metadata": "^0.2.0",
     "rxjs": "^7.8.1",
@@ -43,7 +49,9 @@
     "@types/express": "^5.0.0",
     "@types/jest": "^29.5.2",
     "@types/node": "^20.3.1",
+    "@types/passport-google-oauth2": "^0.1.10",
     "@types/passport-jwt": "^4.0.1",
+    "@types/passport-local": "^1.0.38",
     "@types/supertest": "^6.0.0",
     "@typescript-eslint/eslint-plugin": "^8.0.0",
     "@typescript-eslint/parser": "^8.0.0",
