--- a/package.json
+++ b/package.json
@@ -28,10 +28,12 @@
     "@nestjs/passport": "^11.0.5",
     "@nestjs/platform-express": "^10.0.0",
     "@nestjs/swagger": "^7.1.0",
+    "@nestjs/throttler": "^6.4.0",
     "@nestjs/typeorm": "^11.0.0",
     "@types/passport-google-oauth20": "^2.0.16",
     "bcrypt": "^6.0.0",
     "bullmq": "^5.56.1",
+    "class-transformer": "^0.5.1",
     "class-validator": "^0.14.2",
     "firebase-admin": "^13.4.0",
     "google-auth-library": "^10.1.0",
