--- a/package.json
+++ b/package.json
@@ -36,6 +36,7 @@
     "bullmq": "^5.56.1",
     "class-transformer": "^0.5.1",
     "class-validator": "^0.14.2",
+    "date-fns": "^4.1.0",
     "firebase-admin": "^13.4.0",
     "google-auth-library": "^10.1.0",
     "ioredis": "^5.6.1",
