--- a/package.json
+++ b/package.json
@@ -40,6 +40,7 @@
     "firebase-admin": "^13.4.0",
     "google-auth-library": "^10.1.0",
     "ioredis": "^5.6.1",
+    "node-mailjet": "^6.0.9",
     "passport": "^0.7.0",
     "passport-google-oauth2": "^0.2.0",
     "passport-google-oauth20": "^2.0.0",
@@ -57,6 +58,7 @@
     "@types/express": "^5.0.0",
     "@types/jest": "^29.5.14",
     "@types/node": "^20.3.1",
+    "@types/node-mailjet": "^3.3.12",
     "@types/passport-google-oauth2": "^0.1.10",
     "@types/passport-jwt": "^4.0.1",
     "@types/passport-local": "^1.0.38",
