--- a/android-app/app/src/main/AndroidManifest.xml
+++ b/android-app/app/src/main/AndroidManifest.xml
@@ -2,16 +2,46 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     package="com.progr3ss.androidapp">
 
+    <!-- Hálózati hozzáférés engedélyezése (API hívásokhoz) -->
+    <uses-permission android:name="android.permission.INTERNET" />
+    <uses-permission android:name="android.permission.ACCESS_NETWORK_STATE" />
+
     <application
         android:allowBackup="true"
-        android:label="Progr3ss Android"
-        android:supportsRtl="true">
-        <activity android:name=".MainActivity">
+        android:icon="@mipmap/ic_launcher"
+        android:label="@string/app_name"
+        android:supportsRtl="true"
+        android:theme="@style/Theme.Progr3ss"
+        android:usesCleartextTraffic="true">
+        
+        <!-- Splash Screen - Az alkalmazás belépési pontja -->
+        <activity 
+            android:name=".ui.splash.SplashActivity"
+            android:exported="true"
+            android:theme="@style/Theme.Progr3ss.Splash">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
+
+        <!-- Login Screen -->
+        <activity 
+            android:name=".ui.auth.LoginActivity"
+            android:exported="false"
+            android:windowSoftInputMode="adjustResize" />
+
+        <!-- Register Screen -->
+        <activity 
+            android:name=".ui.auth.RegisterActivity"
+            android:exported="false"
+            android:windowSoftInputMode="adjustResize" />
+
+        <!-- MainActivity - Fejlesztés alatt (placeholder) -->
+        <activity 
+            android:name=".MainActivity"
+            android:exported="false" />
+
     </application>
 
 </manifest>
