--- a/android-app/build.gradle
+++ b/android-app/build.gradle
@@ -1,10 +1,13 @@
+// Top-level build file ahol hozzáadjuk a build konfigurációs opciókat
 buildscript {
+    ext.kotlin_version = '1.9.10'
     repositories {
         google()
         mavenCentral()
     }
     dependencies {
         classpath 'com.android.tools.build:gradle:8.1.0'
+        classpath "org.jetbrains.kotlin:kotlin-gradle-plugin:$kotlin_version"
     }
 }
 
