--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,4 +1,3 @@
-version: '3.8'
 services:
   backend:
     build:
@@ -6,6 +5,12 @@ services:
       # Ha ARM hoston vagy (Apple Silicon), ez segít:
       platforms:
         - linux/arm64
+    env_file:
+      - ./.env
+    environment:
+      DATABASE_URL: postgres://${PG_USERNAME}:${PG_PASSWORD}@${PG_HOST}:${PG_PORT}/${PG_DATABASE}?sslmode=disable
+      REDIS_URL: redis://${REDIS_HOST}:${REDIS_PORT}
+      PORT: 8080
     ports:
       - '8080:8080'
     depends_on:
@@ -13,26 +18,22 @@ services:
         condition: service_healthy
       redis:
         condition: service_healthy
-    environment:
-      # DATABASE_URL: postgres://user:password@db:5432/dbname
-      # REDIS_URL: redis://redis:6379 # <-- Ezt fogja olvasni a backend
-      # Alternatív bontva:
-      REDIS_HOST: redis
-      REDIS_PORT: 6379
 
   db:
     image: postgres:17
     restart: always
+    env_file:
+      - ./.env
     environment:
-      POSTGRES_USER: user
-      POSTGRES_PASSWORD: password
-      POSTGRES_DB: dbname
+      POSTGRES_USER: ${PG_USERNAME}
+      POSTGRES_PASSWORD: ${PG_PASSWORD}
+      POSTGRES_DB: ${PG_DATABASE}
     ports:
       - '5432:5432'
     volumes:
       - pgdata:/var/lib/postgresql/data
     healthcheck:
-      test: ['CMD-SHELL', 'pg_isready -U user -d dbname']
+      test: ['CMD-SHELL', 'pg_isready -U ${PG_USERNAME} -d ${PG_DATABASE}']
       interval: 5s
       timeout: 3s
       retries: 10
