--- a/android_app/app/src/main/AndroidManifest.xml
+++ b/android_app/app/src/main/AndroidManifest.xml
@@ -2,6 +2,11 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools">
 
+    <!-- Internet hozzáférés a backend API-hoz -->
+    <uses-permission android:name="android.permission.INTERNET" />
+    <!-- Hálózati állapot ellenőrzése -->
+    <uses-permission android:name="android.permission.ACCESS_NETWORK_STATE" />
+
     <application
         android:allowBackup="true"
         android:dataExtractionRules="@xml/data_extraction_rules"
@@ -11,6 +16,7 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/Theme.Android_app"
+        android:usesCleartextTraffic="true"
         tools:targetApi="31">
         
         <!-- MainActivity - Az alkalmazás fő belépési pontja -->
